# serverless-vs-cdn-test

./: Cargo.toml  README.md
api/: hello-world.rs
